Fixed bugs in HTML. Added Footer styles. Rectified alignment in JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+footer {
+    text-align: center;
+}
+
+footer ul {
+    display: inline;
+}
+
 /* h1 {
     padding-top: 1em;
     text-align: center; 
